--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ plugins {
 }
 
 version = "0.1"
-group = "ru.mirea"
+group = "ru.mirea.trppsecond8"
 
 repositories {
     mavenCentral()
@@ -23,7 +23,7 @@ micronaut {
 dependencies {
     annotationProcessor 'org.projectlombok:lombok:1.18.18'
     compileOnly 'org.projectlombok:lombok:1.18.18'
-
+    implementation("com.opencsv:opencsv:5.3")
     implementation("io.micronaut:micronaut-runtime")
     implementation("io.micronaut:micronaut-validation")
     implementation("io.micronaut:micronaut-http-client")
@@ -35,7 +35,7 @@ dependencies {
 
 
 application {
-    mainClass.set("ru.mirea.Application")
+    mainClass.set("ru.mirea.trppsecond8.Application")
 }
 
 java {
@@ -61,9 +61,19 @@ javadoc {
     options.encoding = 'UTF-8'
 }
 
+jar {
+    manifest {
+        attributes "Main-Class": "$mainClassName"
+    }
+
+    from {
+        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
+    }
+}
+
 shadowJar {
-    archivesBaseName = "${project.name}"
-    libsDirName = "${project.name}"
+    archivesBaseName = "${project.name}"+"_Sokolovsky"
+    libsDirName = "${project.name}"+"_Sokolovsky"
     classifier('')
 }
 
